fixed main title spacing

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -314,6 +314,16 @@ body {
   gap: 3.2rem;
   margin-bottom: 3.2rem;
 }
+@media screen and (min-width: 48em) {
+  .hero__title-container {
+    gap: 3.9rem;
+  }
+}
+@media screen and (min-width: 64em) {
+  .hero__title-container {
+    gap: 4rem;
+  }
+}
 
 .cta-container {
   display: grid;
