--- a/assets/scss/layouts/_hero.scss
+++ b/assets/scss/layouts/_hero.scss
@@ -28,6 +28,14 @@
   display: grid;
   gap: 3.2rem;
   margin-bottom: 3.2rem;
+
+  @media screen and (min-width: 48em) {
+    gap: 3.9rem;
+  }
+
+  @media screen and (min-width: 64em) {
+    gap: 4rem;
+  }
 }
 
 .cta-container {
